--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "description": "Test for automatic release with Github Action",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "standard-version"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "standard-version": "^9.5.0"
+  }
 }
