--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -15,7 +15,7 @@ plugins:
 analyzeCommits:
     - path: "@semantic-release/commit-analyzer"
       releaseRules:
-        - type: "*"
+        - type: "no-release"
           release: "patch"
         - type: "feat"
           release: "minor"
