--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -41,5 +41,5 @@ generateNotes:
     presetConfig: true
 prepare:
   path: "@semantic-release/git"
-  assets: ["dist/**/*.{js,css}", "docs", "package.json"],
+  assets: ["dist/**/*.{js,css}", "docs", "package.json"]
   message: "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
