fix(ci): fix yaml file

--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -41,5 +41,13 @@ generateNotes:
     presetConfig: true
 prepare:
   path: "@semantic-release/git"
-  assets: ["dist/**/*.{js,css}", "docs", "package.json"]
   message: "chore(release): ${nextRelease.version}\n\n${nextRelease.notes}"
+
+publish:
+  - path: "@semantic-release/github"
+
+success:
+  - "@semantic-release/github"
+
+fail:
+  - "@semantic-release/github"
