--- a/.github/workflows/02-automatic-release.yml
+++ b/.github/workflows/02-automatic-release.yml
@@ -1,9 +1,9 @@
 name: npm-build-publish
 on:
   push:
-    branches: [ master, main ]
+    branches: [ production ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ production ]
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -21,34 +21,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - run: npm install
+      - run: npm i --lockfile-version 1 --package-lock-only
       - run: npx semantic-release
-      - run: cat package.json
-      - run: git status
-#  release:
-#    name: Release
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#        with:
-#          fetch-depth: 0
-#      - name: Set up git
-#        run: |
-#          git config user.name github-actions
-#          git config user.email github-actions@github.com
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: "lts/*"
-#      - name: Install dependencies
-#        run: npm ci
-#      - name: Release
-#        run: |
-#          npm run release
-#          rm -rf CHANGELOG.md
-#          git push --force-with-lease
-#      - name: Push
-#        run: git push --force-with-lease
