--- a/.github/workflows/02-automatic-release.yml
+++ b/.github/workflows/02-automatic-release.yml
@@ -1,9 +1,9 @@
 name: npm-build-publish
 on:
   push:
-    branches: [ production ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ production ]
+    branches: [ main, master ]
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
