--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^4.9.5",
     "semantic-release": "^20.1.0",
-    "semantic-release-npm-github-publish": "^1.5.4"
+    "semantic-release-npm-github-publish": "^1.5.4",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "semantic-release": "^20.1.0",
