--- a/.github/workflows/02-automatic-release.yml
+++ b/.github/workflows/02-automatic-release.yml
@@ -21,5 +21,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - run: npm i --lockfile-version 1 --package-lock-only
+      - run: npm i --lockfile-version 1
       - run: npx semantic-release
